# neurelo-api-examples

./: LICENSE  README.md
haskell-openapi/: .env.example  .gitignore  generate-api.sh  stack.yaml  testCli.hs
haskell-openapi/neurelo/: schema.json
haskell-openapi/neurelo-api/: neurelo-api-spec.cabal
haskell-openapi/neurelo-api/.openapi-generator/: FILES
haskell-openapi/neurelo-api/lib/: NeureloAPISpec.hs
haskell-openapi/neurelo-api/tests/: Instances.hs
haskell-openapi/openapi/: schema.json
haskell-openapi/server/: LICENSE  package.yaml  server.cabal
haskell-openapi/server/app/: Main.hs
java/springboot/: README.md  build.gradle
java/springboot/neurelo/: schema.json
neurelo-api/: README.md  openapi.yaml
neurelo-api/.openapi-generator/: FILES
neurelo-api/lib/NeureloAPISpec/: API.hs  Client.hs  Core.hs  Logging.hs  LoggingKatip.hs  MimeTypes.hs  Model.hs
neurelo-api/tests/: PropMime.hs  Test.hs
php/vanilla/: .env.example  README.md  docker-compose.yml
php/vanilla/data/: constants.php  index.php  require.php
php/vanilla/nginx/: Dockerfile
rust-rest-api/: Cargo.toml  README.md
rust-rest-api/neurelo/: schema.json
rust-rest-api/src/: cli.rs  create.rs  http.rs  main.rs  model.rs
rust/finance-terminal/: .envrc  .envrc.example  .rustfmt.toml  Cargo.toml  Makefile  scratch.md
rust/finance-terminal/neurelo/: schema.json
rust/finance-terminal/sample/: portfolios.json  securities.json
rust/finance-terminal/src/: api.rs  app.rs  cli.rs  ct.rs  http.rs  main.rs  model.rs  sample.rs  ui.rs
server/src/: Lib.hs
(+28 files in other folders)
