[package]
name = "neurelo-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = [
    "rustls-tls",
    "json",
    "trust-dns",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
