[package]
name = "neurelo-rust-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = [
    "rustls-tls",
    "json",
    "trust-dns",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
strum = "0.26"
strum_macros = "0.26"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
crossterm = "0.27.0"
rand = "0.8.5"
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
